# vaidya

./: .gitignore  README.md  app.py  benchmark_report.md  pyproject.toml  requirements.txt
data/raw/: priyavrata_sharma.txt
src/api/: main.py
src/benchmarks/: run_all_benchmarks.py
src/generation/: generator.py
src/pipeline/: chunker.py  embedder.py  parser.py  translator.py
src/retrieval/: retriever.py
