[project]
name = "vaidya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "einops>=0.8.2",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "indic-nlp-library>=0.92",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "loguru>=0.7.3",
    "nltk>=3.9.4",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.17.1",
    "rouge-score>=0.1.2",
    "sacrebleu>=2.6.0",
    "sacremoses>=0.1.1",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.8.0",
    "uvicorn>=0.46.0",
]
